fix hotspot overflow problem

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -164,3 +164,15 @@ body{
     @apply bg-background text-foreground;
   }
 }
+
+.underline-text-gradient {
+  background-image: linear-gradient(90deg,white, gray);
+  background-size: 0% 3px;
+  background-repeat: no-repeat;
+  background-position: left bottom ;
+  transition: background-size 300ms ease;
+}
+
+.underline-text-gradient:hover {
+  background-size: 100% 3px;
+}
